--- a/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
@@ -179,7 +179,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
-                            android:inputType="numberDecimal"
+                            android:inputType="text"
                             android:hint="Enter"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -208,7 +208,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
-                            android:inputType="numberDecimal"
+                            android:inputType="text"
                             android:hint="Enter"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -231,7 +231,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
-                            android:inputType="numberDecimal"
+                            android:inputType="text"
                             android:hint="Enter"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -260,7 +260,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
-                            android:inputType="numberDecimal"
+                            android:inputType="text"
                             android:hint="Enter"
                             android:textSize="14sp" />
                     </LinearLayout>
