Adding the crops list card

--- a/app/src/main/res/layout/activity_crops_manager.xml
+++ b/app/src/main/res/layout/activity_crops_manager.xml
@@ -33,7 +33,7 @@
                 android:textSize="16sp" />
 
             <Spinner
-                android:id="@+id/sp_crop_machine_category"
+                android:id="@+id/sp_crop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimary"
