--- a/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
@@ -181,6 +181,7 @@
                             android:layout_weight="0.4"
                             android:inputType="text"
                             android:hint="Enter"
+                            android:text="@string/default_numeric_value"
                             android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
