--- a/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
@@ -155,6 +155,7 @@
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal"
                         android:background="@drawable/input_shapes"
+                        android:text="@string/default_numeric_value"
                         android:hint="Enter.."
                         android:textSize="14sp" />
 
