--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -149,13 +149,12 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:id="@+id/tv_matings1"
+                                android:id="@+id/layout_crop_dashboard_crops"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
                                 android:layout_weight="1"
                                 android:background="@color/whiteColor"
-
                                 android:orientation="vertical"
                                 android:paddingBottom="5dp">
 
