--- a/app/src/main/res/layout/crop_inventory_list_card.xml
+++ b/app/src/main/res/layout/crop_inventory_list_card.xml
@@ -24,7 +24,7 @@
 
                 <LinearLayout
                     android:orientation="vertical"
-                    android:background="@color/inventory"
+                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
