--- a/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
@@ -44,7 +44,8 @@
                         android:layout_weight="0.4"
                         android:inputType="date"
                         android:hint="Select"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:background="@drawable/input_shapes"/>
 
                 </LinearLayout>
             </LinearLayout>
@@ -76,6 +77,7 @@
                         android:layout_weight="0.4"
                         android:inputType="text"
                         android:hint="Enter"
+                        android:background="@drawable/input_shapes"
                         android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -91,7 +93,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="12dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -108,12 +111,14 @@
                         android:layout_weight="0.4"
                         android:inputType="text"
                         android:hint="Enter"
+                        android:background="@drawable/input_shapes"
                         android:textSize="14sp" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="12dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -130,12 +135,14 @@
                         android:layout_weight="0.4"
                         android:inputType="text"
                         android:hint="Enter"
+                        android:background="@drawable/input_shapes"
                         android:textSize="14sp" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="12dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -148,7 +155,7 @@
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:layout_weight="0.6"
-                            android:text="Quantity"
+                            android:text="@string/quantity"
                             android:textColor="@color/colorPrimary"
                             />
                         <EditText
@@ -157,6 +164,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
                             android:inputType="numberDecimal"
+                            android:background="@drawable/input_shapes"
                             android:hint="Enter"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -172,6 +180,7 @@
                             android:textSize="16sp" android:textStyle="bold"
                             android:layout_weight="0.6"
                             android:text="Cost"
+                            android:layout_marginLeft="7dp"
                             android:textColor="@color/colorPrimary"
                             />
                         <EditText
@@ -181,6 +190,7 @@
                             android:layout_weight="0.4"
                             android:inputType="text"
                             android:hint="Enter"
+                            android:background="@drawable/input_shapes"
                             android:text="@string/default_numeric_value"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -188,7 +198,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="12dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -201,7 +212,7 @@
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:layout_weight="0.6"
-                            android:text="Batch #"
+                            android:text="@string/batch"
                             android:textColor="@color/colorPrimary"
                             />
                         <EditText
@@ -210,6 +221,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
                             android:inputType="text"
+                            android:background="@drawable/input_shapes"
                             android:hint="Enter"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -225,6 +237,7 @@
                             android:textSize="16sp" android:textStyle="bold"
                             android:layout_weight="0.6"
                             android:text="Supplier"
+                            android:layout_marginLeft="7dp"
                             android:textColor="@color/colorPrimary"
                             />
                         <EditText
@@ -233,6 +246,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
                             android:inputType="text"
+                            android:background="@drawable/input_shapes"
                             android:hint="Enter"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -253,7 +267,7 @@
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:layout_weight="0.6"
-                            android:text="TGW"
+                            android:text="@string/tgw"
                             android:textColor="@color/colorPrimary"
                             />
                         <EditText
@@ -262,6 +276,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
                             android:inputType="text"
+                            android:background="@drawable/input_shapes"
                             android:hint="Enter"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -276,7 +291,8 @@
                             android:layout_height="wrap_content"
                             android:textSize="16sp" android:textStyle="bold"
                             android:layout_weight="0.4"
-                            android:text="Usage Unit"
+                            android:text="@string/usage_unit"
+                            android:layout_marginLeft="7dp"
                             android:textColor="@color/colorPrimary"
                             />
                         <Spinner
@@ -286,6 +302,7 @@
                             android:layout_weight="0.6"
                             android:entries="@array/crop_seeds_usage_units"
                             android:hint="Enter"
+                            android:background="@drawable/input_shapes"
                             android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
