--- a/app/src/main/res/layout/crop_field_list_card.xml
+++ b/app/src/main/res/layout/crop_field_list_card.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:orientation="horizontal"
@@ -28,9 +28,8 @@
                         android:orientation="vertical"
                         android:background="@color/white"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        >
+                        android:layout_height="wrap_content">
 
                         <LinearLayout
                             android:orientation="horizontal"
@@ -98,12 +97,7 @@
                             android:padding="5dp"
                             android:orientation="horizontal">
 
-                            <ImageView
-                                android:id="@+id/img_crop_card"
-                                android:layout_width="60dp"
-                                android:layout_height="80dp"
-                                android:layout_margin="10dp"
-                                tools:srcCompat="@drawable/barcode" />
+
 
                             <LinearLayout
                                 android:orientation="vertical"
@@ -119,29 +113,22 @@
                                     android:layout_marginTop="3dp">
 
                                     <TextView
-                                        android:id="@+id/txt_crop_card_name"
+                                        android:id="@+id/txt_crop_field_card_name"
                                         android:textSize="14dp"
                                         android:textColor="#696666"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:textStyle="bold"
-                                        android:text="Tomatoes " />
+                                        android:layout_marginRight="250dp"
+                                        android:text="Field 1 " />
 
-                                    <TextView
-                                        android:id="@+id/txt_crop_card_variety"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:text="(Asla Fg)"
-                                        android:textColor="#696666"
-                                        android:textSize="14dp" />
+
 
                                     <TextView
                                         android:id="@+id/txt_crop_card_area"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:text="3.5ha"
+                                        android:text="15.5 ha"
                                         android:textColor="#696666"
                                         android:textSize="14dp" />
 
@@ -161,20 +148,28 @@
                                         android:orientation="horizontal">
 
                                         <TextView
-                                            android:id="@+id/txt_crop_card_date_planted"
+                                            android:id="@+id/txt_crop_field_card_soil_category"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:text="Date Planted : "
+                                            android:text="Light Sand "
                                             android:textColor="#696666"
-                                            android:textStyle="bold"
                                             android:textSize="14dp" />
 
                                         <TextView
-                                            android:id="@+id/txt_crop_card_actual_date_planted"
+
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:text=","
+                                            android:textColor="#696666"
+                                            android:layout_marginRight="10dp"
+                                            android:textSize="14dp" />
+
+                                        <TextView
+                                            android:id="@+id/txt_crop_field_card_soil_type"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_weight="1"
-                                            android:text="2019-12-24"
+                                            android:text="Loamy Sand"
                                             android:textColor="#696666"
                                             android:textSize="14dp" />
 
@@ -192,12 +187,35 @@
                                     android:layout_marginTop="3dp">
 
                                     <TextView
-                                        android:id="@+id/txt_crop_card_age"
-                                        android:textSize="14dp"
-                                        android:textColor="#696666"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="( 4m 20d ) " />
+                                        android:text="Croppable Area :"
+                                        android:textColor="#696666"
+                                        android:textStyle="bold"
+                                        android:textSize="14dp" />
+
+                                    <TextView
+                                        android:id="@+id/txt_crop_field_card_croppable_area"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="12.45 ha"
+                                        android:textColor="#696666"
+                                        android:layout_marginLeft="10dp"
+                                        android:textSize="14dp" />
+
+
+
+
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:orientation="horizontal"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="6dp"
+                                    android:layout_marginTop="3dp">
+
+
+
 
 
                                 </LinearLayout>
@@ -212,4 +230,6 @@
 
 
     </LinearLayout>
+
+
 </LinearLayout>
