Added Create and Update for Cultivate Manager and Soil Analysis Manager

--- a/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
+++ b/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
@@ -101,6 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:ems="10"
+                android:inputType="numberDecimal"
                 android:hint="Enter"
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
@@ -174,6 +175,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:ems="10"
+                android:inputType="numberDecimal"
                 android:hint="Enter"
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
