--- a/app/src/main/res/layout/activity_crop_spraying_manager.xml
+++ b/app/src/main/res/layout/activity_crop_spraying_manager.xml
@@ -266,8 +266,8 @@
                 android:textColor="@color/colorPrimary"
                 />
 
-            <EditText
-                android:id="@+id/txt_crop_spraying_name"
+            <Spinner
+                android:id="@+id/sp_crop_spraying_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
@@ -375,6 +375,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
+                android:inputType="numberDecimal"
                 android:ems="10"
                 android:hint="Enter"
                 android:textSize="14sp"
