--- a/app/src/main/res/layout/crop_soil_analysis_list_card.xml
+++ b/app/src/main/res/layout/crop_soil_analysis_list_card.xml
@@ -34,7 +34,7 @@
                 android:src="@drawable/treatment_kit" />
 
             <View
-                android:id="@+id/txt_view_crop_soil_analysis_line"
+                android:id="@+id/txt_view_crop_soil_analysis_card_line"
                 android:layout_width="1dp"
                 android:layout_height="55dp"
                 android:textAlignment="center"
@@ -52,7 +52,7 @@
             >
 
             <TextView
-                android:id="@+id/txt_view_crop_soil_analysis_date"
+                android:id="@+id/txt_view_crop_soil_analysis_card_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -82,14 +82,14 @@
                       android:layout_gravity="end">
 
                       <ImageView
-                          android:id="@+id/img_crop_soil_analysis_delete"
+                          android:id="@+id/img_crop_soil_analysis_card_delete"
                           android:layout_width="24dp"
                           android:layout_height="24dp"
                           android:scaleType="fitXY"
                           android:src="@drawable/delete_btn_gray" />
 
                       <ImageView
-                          android:id="@+id/img_crop_soil_analysis_edit"
+                          android:id="@+id/img_crop_soil_analysis_card_edit"
                           android:layout_width="24dp"
                           android:layout_height="24dp"
                           android:src="@drawable/arrow_right_gray" />
@@ -118,7 +118,7 @@
                        />
 
                   <TextView
-                      android:id="@+id/txt_view_crop_soil_analysis_ph"
+                      android:id="@+id/txt_view_crop_soil_analysis_card_ph"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1.3"
@@ -146,13 +146,35 @@
                        />
 
                   <TextView
-                      android:id="@+id/txt_view_crop_soil_organic_matter"
+                      android:id="@+id/txt_view_crop_soil_analysis_card_organic_matter"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="50%"
                       android:textColor="@color/blackText" />
               </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Agronomist : "
+                        android:textStyle="bold"
+                        android:textColor="@color/blackText"
+                        />
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_soil_analysis_card_agronomist"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="50%"
+                        android:textColor="@color/blackText" />
+                </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -168,7 +190,7 @@
                        />
 
                   <TextView
-                      android:id="@+id/txt_view_crop_soil_analysis_results"
+                      android:id="@+id/txt_view_crop_soil_analysis_card_results"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
