--- a/app/src/main/res/layout/content_crop_cultivate_list.xml
+++ b/app/src/main/res/layout/content_crop_cultivate_list.xml
@@ -11,10 +11,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crop_cultivations_recyc_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
 
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
