--- a/app/src/main/res/layout/content_crop_fertilizer_application_list.xml
+++ b/app/src/main/res/layout/content_crop_fertilizer_application_list.xml
@@ -11,15 +11,13 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crop_fertilizer_applications_recyc_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_marginTop="16dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_inventory_spinner"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintStart_toStartOf="parent">
 
     </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
