--- a/app/src/main/res/layout/crop_cultivation_list_card.xml
+++ b/app/src/main/res/layout/crop_cultivation_list_card.xml
@@ -69,12 +69,20 @@
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="horizontal"
-                  >
+                  android:orientation="horizontal">
+
+                  <TextView
+                      android:id="@+id/txt_view_crop_cultivation_card_operation"
+                      android:layout_width="0dp"
+                      android:layout_height="match_parent"
+                      android:layout_weight="1"
+                      android:text="Field Preparation"
+                      android:textColor="@color/blackText" />
                   <LinearLayout
-                      android:layout_width="wrap_content"
+                      android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="right"
+                      android:layout_weight="0.2"
                       android:orientation="horizontal">
 
                       <ImageView
@@ -92,30 +100,6 @@
                   </LinearLayout>
               </LinearLayout>
 
-              <View
-                  android:layout_width="match_parent"
-                  android:layout_height="2dp"
-                  android:background="@color/gray">
-              </View>
-              <LinearLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal">
-
-                  <TextView
-                      android:id="@+id/txt_view_crop_cultivation_card_operation"
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:layout_weight="1"
-                      android:text="Field Preparation"
-                      android:textColor="@color/blackText" />
-              </LinearLayout>
-              <View
-                  android:layout_width="match_parent"
-                  android:layout_height="2dp"
-                  android:background="@color/gray">
-
-              </View>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -163,7 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:textAlignment="center"
-                android:background="@color/black" />
+                android:background="@color/gray_mh" />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
