--- a/app/src/main/res/layout/crops_list_card.xml
+++ b/app/src/main/res/layout/crops_list_card.xml
@@ -62,6 +62,12 @@
                                 android:layout_height="match_parent"
                                 android:layout_margin="2dp"
                                 app:srcCompat="@mipmap/ic_launcher_round" />
+                            <ImageView
+                                android:id="@+id/img_crop_card_soil_analysis"
+                                android:layout_width="25dp"
+                                android:layout_height="match_parent"
+                                android:layout_margin="2dp"
+                                app:srcCompat="@mipmap/ic_launcher_round" />
 
 
                             <ImageView
